[HERCULES-9852] - [UPV] [CSP] Error al copiar socios-periodos pago